# TaskOrchestrator

./: .gitattributes  .gitignore  GOOGLE_DRIVE_SETUP.md  LICENSE  README.md  README.ru.md  package-lock.json  package.json  task-orchestrator.jsx
.github/workflows/: release.yml
hooks/: useDayPlanner.jsx  useSettings.jsx  useSync.jsx  useTaskActions.jsx
pwa/: capacitor.config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
pwa/public/: manifest.json  sw.js
pwa/src/: MobileApp.jsx  MobileApp.tsx  app.test.jsx  main.jsx  main.tsx  mobile.persistence.test.jsx  mobile.test.jsx  mobile.undo-architecture.test.jsx
scripts/: sync-version.mjs  test-linux.sh  test-pwa-linux.sh
shared/: types.ts
shared/core/: constants.js  constants.ts  date.ts  lookup.test.js  lookup.ts  overdue.ts  perfMeter.ts  recurrence.ts  saveNotes.test.js  saveNotes.ts  taskActions.js  taskActions.test.js  taskActions.ts
shared/i18n/: locales.js  locales.ts
tauri-app/: generate-icons.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
tauri-app/src/: TaskOrchestrator.jsx  TaskOrchestrator.tsx  main.jsx  main.tsx  overdue-timezone.test.js  parseDateInput.test.js  recurrence-timezone.test.js  saveNotes.shared.test.js  sync-log.test.js  sync.test.js  task-orchestrator-storage.test.jsx  test-setup.js  transactions.test.js  types.ts  ui.test.jsx  (+6 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
(+129 files in other folders)
